--- a/podcast-app/index.html
+++ b/podcast-app/index.html
@@ -10,7 +10,12 @@
 
 
   
-    
+<link
+rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
    
     <script type="module" src="/src/main.jsx"></script>
 
